--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.1.3",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
+    "ngx-pagination": "^5.1.1",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
